NEON-1442 The links popup used by Count By and Data Table is now an angular directive.  This also fixed a bug with the links popup not rendering at the correct z-index.  Deleted the PopupService because it is no longer needed.

--- a/app/css/popupStyle.css
+++ b/app/css/popupStyle.css
@@ -13,7 +13,7 @@
  * limitations under the License.
  */
 
-.neon-popup-link {
+.neon-popup-button {
     cursor: pointer;
 }
 
